src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-poppins);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #ffffff;
    --foreground: black;
  }
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: var(--font-sans), sans-serif;
}

@keyframes scroll {
  0% {
    transform: translateX(0%);
  }
  100% {
    transform: translateX(-50%);
  }
}

.animate-scroll {
  display: flex;
  width: max-content;
  animation: scroll 20s linear infinite;
}

/*----------------- Arrow buttons -----------------*/
.swiper-button-next,
.swiper-button-prev {
  color: black;
  background: white;
  width: 45px;
  height: 45px;
  border-radius: 50%;
  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
  transition: all 0.3s ease;
}

/*----------------- Hover effect -----------------*/
/*----------------- .swiper-button-next:hover,
.swiper-button-prev:hover {
  background: #c9060a;
  color: white;
} -----------------*/

/*----------------- Reduce default arrow size -----------------*/
.swiper-button-next::after,
.swiper-button-prev::after {
  font-size: 18px;
  font-weight: bold;
}

/*----------------- 3D shadow for hero magazine -----------------*/
.shadow-3d {
  box-shadow:
    0 15px 25px rgba(0.5, 0.5, 0.5, 0.5),
    0 10px 10px rgba(0, 0, 0.4, 0.2),
    0 0 20px rgba(0, 0, 0, 0.1);
}

/*----------------- Perspective for 3D hover effect -----------------*/
.perspective-1000 {
  perspective: 1000px;
}

/*----------------- This forces the removal of default arrows in all browsers -----------------*/
select {
  -webkit-appearance: none !important;
  -moz-appearance: none !important;
  appearance: none !important;
}

/*----------------- Specifically for IE/Edge if needed -----------------*/
select::-ms-expand {
  display: none;
}

.input {
  @apply w-full border px-3 py-2 mt-1 rounded bg-gray-50 focus:ring-2 focus:ring-[#c9060a] outline-none;
}


.plan-features ul {
  list-style: disc;
  padding-left: 1.2rem;
  margin: 0;
}

.plan-features li {
  margin-bottom: 6px;
  color: #fff1f2 !important;
  font-size: 14px;
  line-height: 1.5;
  font-weight: 500;
}

.plan-features li::marker {
  color: #ffe4e6;
}

.plan-features p {
  margin: 0;
  color: #fff1f2;
}

